remove unnecessary border

--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,7 @@
 }
 #navbar a {
   border: 1px solid;
+  border-left: 0px;
   border-bottom-width: 0px;
   border-right-width: 0px;
   text-decoration: none;
