--- a/css/main.css
+++ b/css/main.css
@@ -37,7 +37,13 @@ p {
   line-height: 35px;
 }
 code {
-  color: green;
+  color: #7CFC00;
+  display: inline-block;
+  background-color: black;
+  padding: 10px;
+  border-radius: 4%;
+  width: 50%;
+  margin-left: 2%;
 }
 @media (max-width: 822px) {
   #navbar {
